# nest_crm_mobile

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  license.txt  pyproject.toml
nest_crm_mobile/: hooks.py  modules.txt
nest_crm_mobile/mobile_crm/page/crm_mobile/: crm_mobile.html  crm_mobile.js  crm_mobile.json
nest_crm_mobile/public/css/: crm_mobile.css
