[project]
name = "nest_crm_mobile"
authors = [
    { name = "NestERP / Manifold SA", email = "ops@syncflo.co.za"}
]
description = "NestERP CRM Mobile - simplified rep screen for customer view + quick order capture"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "nest_crm_mobile"
